# python-sense-emu

./: .gitignore  pyproject.toml  setup.cfg
sense_emu/: record.py
sense_emu/locale/: README  sense-emu.pot  sk_SK.po
